# ros_pybullet_rl2

./: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
common/additions_into_cartographer/configuration_files/: revo_lds.lua
common/additions_into_cartographer/launch/: demo_revo_lds.launch
common/additions_into_imitation/: rl.py
common/additions_into_pybullet-gym/: __init__.py
common/additions_into_pybullet-gym/assets/robots/omnirobot_v3/launch/: display.launch  gazebo.launch
common/additions_into_pybullet-gym/assets/robots/omnirobot_v3/urdf/: omnirobot_v3.urdf
common/additions_into_pybullet-gym/yc/envs/: env_bases.py  nav_omni2_env.py  omni2_env.py  py_env_bases.py  py_omni_env.py
common/additions_into_pybullet-gym/yc/envs/Archive/: nav_apf_omni_env.py  nav_lidar_omni_env.py
common/additions_into_pybullet-gym/yc/robots/: __init__.py  nav_omnirobot2.py  omni_base2.py  omnirobot2.py  py_omni_base.py  py_omnirobot.py  py_robot_bases.py  robot_bases2.py
common/additions_into_pybullet-gym/yc/robots/Archive/: nav_apf_omnirobot.py  nav_lidar_omnirobot.py
common/additions_into_pybullet-gym/yc/scenes/: __init__.py  stadium.py
common/additions_into_pybullet-gym/yc/temp/ppo2/PyOmnibase-v0_1/: 0.monitor.csv  1.monitor.csv  10.monitor.csv  11.monitor.csv  12.monitor.csv  13.monitor.csv  14.monitor.csv  15.monitor.csv  2.monitor.csv  3.monitor.csv  4.monitor.csv  5.monitor.csv  6.monitor.csv  7.monitor.csv  8.monitor.csv  9.monitor.csv  evaluations.npz
common/additions_into_pybullet-gym/yc/temp/ppo2/PyOmnibase-v0_2/: 0.monitor.csv  1.monitor.csv  10.monitor.csv  11.monitor.csv  12.monitor.csv  13.monitor.csv  14.monitor.csv  15.monitor.csv  2.monitor.csv  3.monitor.csv  4.monitor.csv  5.monitor.csv  6.monitor.csv  7.monitor.csv  8.monitor.csv  9.monitor.csv  evaluations.npz
common/additions_into_pybullet-gym/yc/temp/ppo2/PyOmnibase-v0_3/: 0.monitor.csv  1.monitor.csv  10.monitor.csv  11.monitor.csv  (+13 more)
common/other_packages/ira_laser_tools/cfg/: laserscan_multi_merger.cfg  param.yaml
common/other_packages/ira_laser_tools/launch/: laserscan_multi_merger.launch
common/other_packages/ira_laser_tools/src/: laserscan_multi_merger.cpp
common/other_packages/omnirobot_v3/: CMakeLists.txt  package.xml
common/other_packages/omnirobot_v3/urdf/: omnirobot_v3.csv  omnirobot_v3.urdf  omnirobot_v3_1LiDAR.urdf
common/other_packages/semantic_layers/: .gitignore  CMakeLists.txt  README.md  costmap_plugins.xml  package.xml
common/other_packages/semantic_layers/cfg/: ProxemicLayer.cfg  SemanticLayerPlugin.cfg
common/other_packages/semantic_layers/include/semantic_layers/: semantic_cost_values.h  semantic_inflation_layer.h  semantic_layer.h  semantic_obstacle_layer.h  semantic_proxemic_layer.h  semantic_social_layer.h
common/other_packages/semantic_layers/msg/: People.msg  Person.msg
common/other_packages/semantic_layers/scripts/: dynamic_cost_client.py  people_msgs_pub.py
common/other_packages/semantic_layers/src/: semantic_inflation_layer.cpp  semantic_layer.cpp  semantic_obstacle_layer.cpp  semantic_proxemic_layer.cpp  semantic_social_layer.cpp
common/urdf/: 1m_wall.urdf  cube_platform.urdf  dog_assembly.urdf
common/urdf/laser_scanner/: laser_scanner.urdf.xacro
common/urdf/r2d2_robot/: r2d2.urdf  r2d2.urdf.xacro
config/: gen_env_pybullet_params.yaml  load_env_pybullet_params.yaml  omnirobot_pybullet_params.yaml  omnirobot_sml_navigation_params.yaml  omnirobot_training_params.yaml  omnirobot_validation_params.yaml
config/navigation/: costmap_common_params.yaml  eband_local_planner.yaml  global_costmap_params.yaml  local_costmap_params.yaml
config/non-ros/: pyomnirobot_pybullet_params.yaml  pyomnirobot_training_params.yaml
docker/: Dockerfile-rl  Dockerfile-rl2  Dockerfile-rl2-gpu  Dockerfile-rl2-gpu_kinetic  Dockerfile-rl2-gpu_melodic  Dockerfile.kinetic  README.md  deprecated_Dockerfile-rl2-gpu_kinetic  run.sh  run_nvidia.bash
docker/config/: bashrc  install_dependencies.sh
docker/config_kinetic/: ros_entrypoint_kinetic.sh
docker/config_melodic/: add_sshkeys.sh  bashrc  docker-clean  install_dependencies.sh  machine-id  ros_entrypoint_melodic.sh  terminator_config  tmux.conf
docker/docker-cartographer/: Dockerfile-Cartographer.kinetic  README.md  run_nvidia.bash
docker/docker-cartographer/scripts/: catkin_test_results.sh  install.sh  install_debs.sh  prepare_catkin_workspace.sh  prepare_jenkins_catkin_workspace.sh
launch/: cmd_vel_plot.launch  laserscan_merger.launch  nav_human_demo.launch  nav_train.launch  nav_train_airl.launch  nav_train_bc.launch  nav_train_dagger.launch  nav_train_gail.launch  nav_train_rl.launch  nav_validate.launch  pytrain.launch  pyvalidate.launch  train.launch  validate.launch
launch/navigation/: amcl.launch  hector_mapping.launch  localization.launch  move_base_eband.launch  nav.launch
map/: env13.yaml  env13_NoDynamicObstacles.yaml
msg/: DepthImageProcessed.msg  ForceTorqueData.msg  ForceTorqueSensors.msg
rviz/: navigation.rviz
scripts/: joint_state_publisher  lidar_tf.py  ros_pybullet_human_demo_node  ros_pybullet_train_airl_node  ros_pybullet_train_bc_node  ros_pybullet_train_dagger_node  ros_pybullet_train_gail_node  ros_pybullet_train_node  ros_pybullet_validate_node
src/: src.text
src/ros_pybullet_rl2/: README.md  check_training_progress.py  ros_pybullet_airl.py  ros_pybullet_bc.py  ros_pybullet_dagger.py  ros_pybullet_gail.py  ros_pybullet_human_demo.py  ros_pybullet_rl2.py  validate (not ready).py  validate.py
src/ros_pybullet_rl2/hyperparams/: a2c.yml  ppo.yml
src/ros_pybullet_rl2/logs/ppo/expert_data/: final_env13_expertdata_16032022.pkl  final_env13_expertdata_withmap_29032022.pkl
src/ros_pybullet_rl2/plugins/: body_vel_control.py  contact_sensor.py  control.py  force_torque_sensor.py  joint_state_pub.py  laser_scanner.py  laser_scanner_modular.py  odometry.py  rgbd_camera.py
src/ros_pybullet_rl2/sdf/: sdf_parser.py
src/ros_pybullet_rl2/utils/: callbacks.py  exp_manager.py  exp_manager_human_demo.py  function_exec_manager.py  hyperparams_opt.py  utils.py
(+219 files in other folders)
